<resources>
    <string name="preference_ime_setting_app">Setting</string>
    <string name="preference_key_setting_menu">Software Keyboard</string>
    <string name="preference_key_sound_title"> Sound on Key Press </string>
    <string name="preference_key_sound_summary"> Enable key click sound. </string>
    <string name="preference_key_vibration_title"> Vibrate on Key Press </string>
    <string name="preference_key_vibration_summary"> Enable key click vibration. </string>
    <string name="preference_preview_title"> Key Preview </string>
    <string name="preference_preview_summary"> Enable key preview. </string>
    <string name="preference_auto_caps_title"> Auto Capitalization </string>
    <string name="preference_auto_caps_summary"> Automatically capitalize the 1st char of a sentence in alphabet mode. </string>
    <string name="preference_keyboard_skin_title">Keyboard Image</string>
    <string name="preference_keyboard_skin_summary">Change keyboard image.</string>
    <string name="preference_keyboard_android_default">Standard</string>
    <string name="preference_keyboard_simple">Simple</string>
    <string name="preference_keyboard_metal">Metal</string>
    <string name="preference_conversion_menu">Conversion</string>
    <string name="preference_prediction_title">Word Prediction</string>
    <string name="preference_prediction_summary">Display predicted words as conversion candidates.</string>
    <string name="preference_correct_spell_title">Typing Error Correction</string>
    <string name="preference_correct_spell_summary">Display predicted words for correcting typing error.</string>
    <string name="preference_input_learning_title">Input Word Learning</string>
    <string name="preference_input_learning_summary">Learn input words.</string>
    <string name="preference_aboutime_menu"> About IME </string>
    <string name="preference_dictionary_menu"> Dictionary </string>
    <string name="preference_dictionary_menu_ja"> Japanese User Dictionary </string>
    <string name="preference_dictionary_menu_en"> English User Dictionary </string>
    <string name="preference_dictionary_menu_zhcn"> Chinese User Dictionary </string>
    <string name="preference_user_dictionary">User Dictionary</string>
    <string name="preference_user_dictionary_edit_words_title">User Dictionary</string>
    <string name="preference_user_dictionary_edit_words_summary">List/add/edit/delete words in user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_ja">List/add/edit/delete words in Japanese user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_en">List/add/edit/delete words in English user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_zhcn">List/add/edit/delete words in Chinese user dictionary.</string>
    <string name="preference_user_dictionary_clear_learning_title">Clear Learning Dictionary</string>
    <string name="preference_user_dictionary_clear_learning_summary">Remove all words from learning dictionary.</string>
    <string name="preference_user_dictionary_clear_user_title">Clear User Dictionary</string>
    <string name="preference_user_dictionary_clear_user_summary">Remove all words from user dictionary.</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_clear_user_dictionary_message">Clear user dictionary?</string>
    <string name="dialog_clear_learning_dictionary_message">Clear learning dictionary?</string>
    <string name="dialog_clear_user_dictionary_done">Cleared.</string>
    <string name="dialog_clear_learning_dictionary_done">Cleared.</string>
    <string name="user_dictionary_list_words">Registered words</string>
    <string name="user_dictionary_list_words_en">Registered words in English User Dic</string>
    <string name="user_dictionary_list_words_ja">Registered words in Japanese User Dic</string>
    <string name="user_dictionary_list_words_zhcn">Registered words in Chinese User Dic</string>
    <string name="user_dictionary_edit_words">Edit</string>
    <string name="user_dictionary_title_read">Reading</string>
    <string name="user_dictionary_title_candidate">Word</string>
    <string name="user_dictionary_add">Add</string>
    <string name="user_dictionary_edit">Edit</string>
    <string name="user_dictionary_delete">Delete</string>
    <string name="user_dictionary_delete_confirm">Delete the selected word?</string>
    <string name="user_dictionary_delete_complete">Deleted.</string>
    <string name="user_dictionary_delete_fail">Fail to delete it</string>
    <string name="user_dictionary_words_duplication_message">Already registered.</string>
    <string name="user_dictionary_over_max_text_size_message">Length of the string exceeds the limit.</string>
    <string name="user_dictionary_creating_wordlist">Loading</string>
    <string name="user_dictionary_init">Initialize?</string>
    <string name="user_dictionary_prev_button">　≪　</string>
    <string name="user_dictionary_next_button">　≫　</string>
    <string name="openwnn_english_copyright">Ver.1.3.5\nOMRON SOFTWARE Co., Ltd.</string>
    <string name="openwnn_english">OpenWnn English</string>
    <string name="openwnn_english_system_dictionary">/data/data/name.yxl.openwnn/lib/libname_yxl_libWnnEngDic.so</string>
    <string name="openwnn_english_writable_dictionary">/data/data/name.yxl.openwnn/writableEN.dic</string>
    <string name="en_word_separators">.,;:!?</string>
    <string name="openwnn_japanese_copyright">Ver.1.3.5\nOMRON SOFTWARE Co., Ltd.</string>
    <string name="openwnn_japanese">Japanese IME</string>
    <string name="openwnn_japanese_system_dictionary">/data/data/name.yxl.openwnn/lib/libname_yxl_libWnnJpnDic.so</string>
    <string name="openwnn_japanese_writable_dictionary">/data/data/name.yxl.openwnn/writableJAJP.dic</string>
    <string name="openwnn_china_copyright">Ver.1.3.5\nOMRON SOFTWARE Co., Ltd.</string>
    <string name="openwnn_china">OpenWnn Chinese</string>
    <string name="openwnn_china_system_dictionary">/data/data/name.yxl.openwnn/lib/libname_yxl_libWnnZHCNDic.so</string>
    <string name="openwnn_china_writable_dictionary">/data/data/name.yxl.openwnn/writableZHCN.dic</string>
    <string name="cn_word_separators">.,;:!?</string>
    <string name="button_candidate_select">Select</string>
    <string name="button_candidate_delete">Delete learning?</string>
    <string name="button_candidate_cancel">Close</string>
    <string name="key_left_arrow">↤</string>
    <string name="key_right_arrow">↦</string>
    <string name="key_space">スペース</string>
    <string name="key_qwerty_full_question">？</string>
    <string name="key_qwerty_full_comma">，</string>
    <string name="key_qwerty_full_period">．</string>
    <string name="key_qwerty_full_at_sign">＠</string>
    <string name="key_qwerty_full_number_sign">＃</string>
    <string name="key_qwerty_full_percent_sign">％</string>
    <string name="key_qwerty_full_ampersand">＆</string>
    <string name="key_qwerty_full_asterrisk">＊</string>
    <string name="key_qwerty_full_plus_sign">＋</string>
    <string name="key_qwerty_full_minus_sign">－</string>
    <string name="key_qwerty_full_equal_sign">＝</string>
    <string name="key_qwerty_kagi_kakko_left">「</string>
    <string name="key_qwerty_kagi_kakko_right">」</string>
    <string name="key_qwerty_full_exclamation_mark">！</string>
    <string name="key_qwerty_full_left_parenthesis">（</string>
    <string name="key_qwerty_full_right_parenthesis">）</string>
    <string name="key_qwerty_full_colon">：</string>
    <string name="key_qwerty_full_semicolon">；</string>
    <string name="key_qwerty_full_middot">・</string>
    <string name="key_qwerty_full_thilde">～</string>
    <string name="key_qwerty_full_double_quotation_sign">”</string>
    <string name="key_qwerty_full_plus_minus_sign">±</string>
    <string name="key_qwerty_full_underscore">＿</string>
    <string name="key_qwerty_full_left_curly_blacket">｛</string>
    <string name="key_qwerty_full_right_curly_blacket">｝</string>
    <string name="key_qwerty_full_vertical_bar">｜</string>
    <string name="key_qwerty_full_less_than_sign">＜</string>
    <string name="key_qwerty_full_greater_than_sign">＞</string>
    <string name="key_qwerty_full_left_single_quote">‘</string>
    <string name="key_qwerty_full_right_single_quote">’</string>
    <string name="key_qwerty_full_back_slash">＼</string>
    <string name="key_qwerty_full_dollar_sign">＄</string>
    <string name="key_qwerty_full_yen_sign">￥</string>
    <string name="key_qwerty_full_hat">＾</string>
    <string name="key_qwerty_full_slash">／</string>
    <string name="preference_disp_keytop_directchar_summary">Display flick character on keytop.</string>
    <string name="preference_disp_keytop_directchar_title">Keytop Flick Character</string>
    <string name="preference_auto_insert_space_summary">Insert space after autocompletion.</string>
    <string name="preference_auto_insert_space_title">Auto Insert Space</string>
    <string name="preference_del_key_repeatable_summary">Enable delete key auto repeat.</string>
    <string name="preference_del_key_repeatable_title">Delete Key Auto Repeat</string>
    <string name="preference_keyin_toggle_summary">Enable toggle input</string>
    <string name="preference_keyin_toggle_title">Toggle Input</string>
    <string name="preference_auto_qwerty_hiragana_title">QWERTY Keyboard at Hiragana Mode</string>
    <string name="preference_auto_qwerty_hiragana_summary">Automatically changes QWERTY type keyboard at Hiragana mode</string>
    <string name="preference_auto_qwerty_alphabet_title">QWERTY Keyboard at Alphabet Mode</string>
    <string name="preference_auto_qwerty_alphabet_summary">Automatically changes QWERTY type keyboard at alphabet mode</string>
    <string name="preference_auto_qwerty_number_title">QWERTY Keyboard at Number Mode</string>
    <string name="preference_auto_qwerty_number_summary">Automatically changes QWERTY type keyboard at number mode</string>
    <string name="preference_bigkeyboard_portrait_summary">Set big-keyboard at portrait display mode</string>
    <string name="preference_bigkeyboard_portrait_title">Big-keyboard / Portrait</string>
    <string name="preference_bigkeyboard_landscape_summary">Set big-keyboard at landscape display mode</string>
    <string name="preference_bigkeyboard_landscape_title">Big-keyboard / Landscape</string>
    <string name="preference_candidates_1line_summary">Set short-display mode</string>
    <string name="preference_candidates_1line_title">Simple Candidates</string>
    <string name="preference_flick_threshold_title">Flick Threshold Level</string>
    <string name="preference_flick_threshold_summary">Select Flick Threshold Level</string>
    <string name="preference_use_socialime_summary">Enable Social IME</string>
    <string name="preference_use_socialime_title">Social IME</string>
    <string name="preference_use_contactbook_summary">Refer Contact Book</string>
    <string name="preference_use_contactbook_title">Refer Contact Book</string>
    <string name="openwnn_japanese_version">FlickWnn IME Ver. 2.03</string>
    <string name="preference_popup_preview_sel_popup_feedback">Popup/Feedback</string>
    <string name="dialog_export_dictionary_message">Export user dictionary?</string>
    <string name="dialog_import_dictionary_message">Import user dictionary?</string>
    <string name="preference_user_dictionary_export_summary">Export user dictionary to /sdcard/FlickWnn/user_dic.txt</string>
    <string name="preference_user_dictionary_import_summary">Import user dictionary from /sdcard/FlickWnn/user_dic.txt</string>
    <string name="preference_user_dictionary_export_title">Export User Dictionary</string>
    <string name="preference_user_dictionary_import_title">Import User Dictionary</string>
</resources>