<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (C) 2008,2009  OMRON SOFTWARE Co., Ltd.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="openwnn_pref_ja">

    <PreferenceCategory android:title="@string/preference_key_setting_menu">
        <CheckBoxPreference
            android:key="key_sound"
            android:summary="@string/preference_key_sound_summary"
            android:title="@string/preference_key_sound_title" />
        <CheckBoxPreference
            android:key="key_vibration"
            android:summary="@string/preference_key_vibration_summary"
            android:title="@string/preference_key_vibration_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="popup_preview"
            android:summary="@string/preference_preview_summary"
            android:title="@string/preference_preview_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="auto_caps"
            android:summary="@string/preference_auto_caps_summary"
            android:title="@string/preference_auto_caps_title" />
        <name.yxl.openwnn.JAJP.KeyboardListPreferenceJAJP
            android:defaultValue="keyboard_android_default"
            android:entries="@array/keyboard_skin"
            android:entryValues="@array/keyboard_skin_id"
            android:key="keyboard_skin"
            android:summary="@string/preference_keyboard_skin_summary"
            android:title="@string/preference_keyboard_skin_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_conversion_menu">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="opt_enable_learning"
            android:summary="@string/preference_input_learning_summary"
            android:title="@string/preference_input_learning_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="opt_prediction"
            android:summary="@string/preference_prediction_summary"
            android:title="@string/preference_prediction_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="opt_prediction"
            android:key="opt_spell_correction"
            android:summary="@string/preference_correct_spell_summary"
            android:title="@string/preference_correct_spell_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_dictionary_menu">
        <PreferenceScreen
            android:key="user_dictionary_edit_words"
            android:persistent="false"
            android:summary="@string/preference_user_dictionary_edit_words_summary_ja"
            android:title="@string/preference_dictionary_menu_ja">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="name.yxl.openwnn.JAJP.UserDictionaryToolsListJAJP"
                android:targetPackage="name.yxl.openwnn" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="user_dictionary_edit_words"
            android:persistent="false"
            android:summary="@string/preference_user_dictionary_edit_words_summary_en"
            android:title="@string/preference_dictionary_menu_en">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="name.yxl.openwnn.EN.UserDictionaryToolsListEN"
                android:targetPackage="name.yxl.openwnn" />
        </PreferenceScreen>

        <name.yxl.openwnn.JAJP.ClearLearnDictionaryDialogPreferenceJAJP
            android:dialogMessage="@string/dialog_clear_learning_dictionary_message"
            android:key="clear_learn_dictionary"
            android:negativeButtonText="@string/dialog_button_cancel"
            android:positiveButtonText="@string/dialog_button_ok"
            android:summary="@string/preference_user_dictionary_clear_learning_summary"
            android:title="@string/preference_user_dictionary_clear_learning_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_aboutime_menu">
        <Preference
            style="?android:preferenceInformationStyle"
            android:key="openwnn_version"
            android:summary="@string/openwnn_japanese_copyright"
            android:title="@string/openwnn_japanese" />
    </PreferenceCategory>

</PreferenceScreen>

